--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,31 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
+<div ng-controller="LoginCtrl">
+  <div class="row-md-2 container text-center">
+    <h1>Medicare</h1>
+    <img src="../../images/medicine.png" width="100" height="100">
+    <hr class="style2">
+  </div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
+  <div class="row-md-2 top-padding-5">
+    <div class="container">
 
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+      <div class="jumbotron">
+        <div class="row-xs-12">
+          <form>
+            <div class="form-group">
+              <label>Usuario:</label>
+              <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Usuario">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Contraseña:</label>
+              <input type="password" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Contraseña">
+            </div>
+            <div class="text-center">
+              <a class="btn btn-primary" href="/dashboard.html">Iniciar Sesión</a>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
