--- a/app/views/frontEndAdmin/login.html
+++ b/app/views/frontEndAdmin/login.html
@@ -21,7 +21,7 @@
                         <input type="password" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Contraseña">
                     </div>
                     <div class="text-center">
-                        <a class="btn btn-primary" href="/dashboard.html">Iniciar Sesión</a>
+                        <a class="btn btn-primary" href="#!/dashboard.html">Iniciar Sesión</a>
                     </div>
                 </form>
             </div>
