--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<div ng-controller="LoginCtrl">
+<div>
   <div class="row-md-2 container text-center">
     <h1>Medicare</h1>
     <img src="../../images/medicine.png" width="100" height="100">
