--- a/app/views/ng-navigation-admin-template.html
+++ b/app/views/ng-navigation-admin-template.html
@@ -10,14 +10,12 @@
                 <a class="nav-link" href="/homeAdmin">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/nuevaEncuesta.html">Nueva encuesta</a>
+                <a class="nav-link" href="/nuevaEncuesta.html">Nuevo encuestador</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/encuestas.html">Encuestas</a>
+                <a class="nav-link" href="/encuestas.html">Encuestadores</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/configurarReporte.html">Configurar Reporte</a>
-            </li>
+
         </ul>
 
         <a class="nav-link" href="login.html">Cerrar Sesión</a>
