--- a/app/views/frontEndEncuestador/visualizarEncuesta.html
+++ b/app/views/frontEndEncuestador/visualizarEncuesta.html
@@ -1,29 +1,8 @@
-<div ng-controller="EncuestasCtrl">
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="/dashboard.html">Medicare <span></span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
 
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/dashboard.html">Inicio</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/nuevaEncuesta.html">Nueva encuesta</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/encuestas.html">Encuestas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/configurarReporte.html">Configurar Reporte</a>
-                </li>
-            </ul>
 
-            <a class="nav-link" href="login.html">Cerrar Sesión</a>
-        </div>
-    </nav>
+
+
+<div ng-controller="EncuestaDetalleCtrl">
 
     <div class="row-xs-12 text-center">
         <h1> Visualizar Encuesta</h1>
@@ -35,7 +14,7 @@
             <div class="row">
                      <div class="col-sm-12">
                         <label class="font-weight-bold">Nombre de la encuesta:</label>
-                        <label>nombre1</label>
+                        <label>{{modelo.encuesta.nombre}}</label>
                     </div>
             </div>
             <br>
@@ -49,9 +28,9 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="list-group">
-                        <a href="/visualizarPreguntas.html" class="list-group-item list-group-item-action">Categoría 1</a>
-                        <a href="#" class="list-group-item list-group-item-action">Categoría 2</a>
-                        <a href="#" class="list-group-item list-group-item-action">Categoría 3</a>
+                            <a href="/visualizarPreguntas.html" class="list-group-item list-group-item-action" ng-repeat="categoria in modelo.encuesta.categoria">
+
+                            </a>
                     </div>
                     </div>
 
