--- a/app/views/main.html
+++ b/app/views/main.html
@@ -17,8 +17,10 @@
       <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#!/loginAdmin">Administrador</a></li>
+          <li><a ng-href="#!/loginAdministrador">Administrador</a></li>
+
           <li><a ng-href="#!/loginEncuestador">Encuestador</a></li>
+
           <li><a ng-href="#!/loginCliente">Cliente</a></li>
         </ul>
       </div>
